syntax = "proto3";

package role;

import "google/protobuf/timestamp.proto";

option go_package = "/role";

message Role {
    string ID = 1;
    string name = 2;
    string description = 3;
    bool is_default = 4;
    google.protobuf.Timestamp created_at = 5;
}

message Permission {
    string ID = 1;
    string name = 2;
    string description = 3;
    bool is_default = 4;
    google.protobuf.Timestamp created_at = 5;
}

message PermissionRequest {
    Permission permission = 1;
    string role_name = 2;
}

message PermissionsRequest {
    string role_name = 1;
}

message Success {
    bool success = 1;
}

message Permissions {
    repeated Permission permissions = 1;
}

service RoleService {
    rpc CreateRole(Role) returns (Success) {};
    rpc CreatePermission(PermissionRequest) returns (Success) {};
    rpc GetPermissions(PermissionsRequest) returns (Permissions) {};
}